# minecraft-python

./: .gitignore  MANIFEST.in  README.md  README_DE.md  entities_validated.csv  pyproject.toml  requirements.txt
demo/: block_unter_spieler.py  großer_sprung.py  id_validator.py  jump_and_run_checkpoint.py  stress_test.py  test.py
ressourcen/: blocks_items_validated.csv  entities_validated.csv  generate_docs.py  generate_enums.py  generiere_enums.py  generiere_library_docs.py
sk_minecraft/: __about__.py  __init__.py  __main__.py  boss_leiste.py  daten_modelle.py  entity.py  kern.py  main.py  material.py
st_minecraft/: __about__.py  __init__.py  boss_leiste.py  core.py  daten_modelle.py  entity.py  kern.py  main.py  material.py
st_minecraft/core/: __init__.py  core.py
st_minecraft/de/: __init__.py  _exceptions.py  boss_leiste.py  daten_modelle.py  entity.py  main.py  material.py
st_minecraft/en/: __init__.py  boss_bar.py  data_models.py  entity.py  main.py  material.py
st_minecraft_de/: __init__.py
