[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sk_minecraft"
version = "0.0.1"
description = "A Python package for sk_minecraft."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
