[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "st_minecraft"
description = "A simple (educational) python library to interact with a minecraft server, offered in english and german. ."
authors = [
    { name = "Chris Geron", email = "git@chris-ge.de" },
    { name = "Adrian Oeyen", email= "oeyenadrian@gmail.com" },
    { name = "sk stiftung jugend und medien der Sparkasse KölnBonn", email= "info@sk-jugend.de" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]

dynamic = ["dependencies", "version"]

license-files = ["LICENSE*"]
license = "AGPL-3.0-or-later"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = { attr = "st_minecraft.__version__" }

[tool.setuptools.packages.find]
include = ["st_minecraft*"]

[tool.isort]
profile = "black"
force_single_line = "true"

[tool.black]
line-length = 120
